--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -115,3 +115,24 @@
 .sign-out-button:hover {
   background-color: #f5f5f5;
 } 
+
+
+.discussion-button-container {
+  left: 10000px;
+  top: 50%;
+}
+
+.discussion-button {
+  display: inline-block;
+  padding: 10px 10px;
+  background-color: #4F1C51;
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 2px;
+  font-size: 12px;
+  transition: background-color 1s;
+}
+
+.discussion-button:hover {
+  background-color: #210F37;
+}
