Profile page can be viewable, added profile option at user option

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -136,3 +136,15 @@
 .discussion-button:hover {
   background-color: #210F37;
 }
+
+.option-button {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  border: none;
+  background: none;
+  color: white;
+  cursor: pointer;
+  text-align: left;
+  border-radius: 4px;
+  transition: background-color 0.2s;
+}
