--- a/src/styles/post_preview.css
+++ b/src/styles/post_preview.css
@@ -1,33 +1,49 @@
 .discussion-preview_background {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5);
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
+.background_discussion {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.2),
+                inset 0 1px 0 rgba(255, 255, 255, 0.2);
 
+}
 .discussion-preview {
-    width: 100%; /* Stretch to the full width of the screen */
-    height: auto; /* Adjust height dynamically based on content */
+    width: 100%;
+    height: auto;
     color: white;
     display: flex;
-    flex-direction: column; /* Stack child elements vertically */
-    align-items: flex-start; /* Align items to the left */
+    flex-direction: column;
+    align-items: flex-start;
     text-align: left;
     justify-content: center;
-    font-size: 12px;
+    font-size: 20px;
     border-radius: 12px;
 }
 
 .discussion-preview:hover {
-    background-color: #1e1e1e; /* Slightly darker background on hover */
+    background-color: #1e1e1e;
     color: #ffffff;
     cursor: pointer;
- 
 }
-.preview-card {
-    width: 95%; /* Increase the width to make it wider */
-    max-width: 1200px; /* Allow a larger maximum width */
-    color: white;
-    border-radius: 6px; /* Keep slightly rounded corners */
-    transform: skew(0); /* Keep the box straight */
-    text-align: left; /* Align text to the left */
+
+.thread-description {
+    font-size: 18px;
+    color: #ffffff;
+}
+
+.author-date{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 5px;
+    font-size: 12px;
+}
+
+.date {
+    font-size: 12px;
+    color: #aaa;
+    margin-left: 10px;
+    display: inline-block;
 }
