Added template for review list, first half of profile done, need to integrate API with the interface

--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -1,25 +1,38 @@
 /* Profile styles */
-.stats {
+.stats-section {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 40px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    /* gap: 40px; */
     margin-top: 20px;
     margin-bottom: 100px;
 }
 
 .profile-picture {
-    width: 100px;
+    width: 200px;
     height: auto;
+    margin: 20px;
 }
 
 .profile-image {
-    width: 50px;
+    width: 70px;
     height: auto;
-    
+    margin: 10px;
 }
 
 .profile-image:hover {
     background-color: #666666;
+}
+
+.user-card {
+    background-color: #333333;
+    color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    text-decoration: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s, box-shadow 0.3s;
+    margin: 20px;
 }
 
 .stats-card {
@@ -30,11 +43,12 @@
     text-decoration: none;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s, box-shadow 0.3s;
+    margin: 20px;
 }
 
 .stats-panel {
     display: grid;
-    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(700px, 1fr));
     gap: 40px;
     margin-top: 20px;
     margin-bottom: 100px;
@@ -51,10 +65,17 @@
     width: 70%;
 }
 
-.film-info {
-    margin: 5px;
-    background-color: white;
-    padding: 5px;
-    width: 10%;
+.circle-picture {
+    width: 15px;
+    margin-right: 10px;
+}
+
+h2 {
     font-size: 1.5rem;
+    text-align: center;
+}
+
+p {
+    font-size: 1.2rem;
+    text-align: left;
 }
