--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -69,8 +69,8 @@ p {
     text-align: left;
 }
 
-.tv-show-history,
-.movie-history {
+
+.history-container{
     background-color: #333333;
     color: #ffffff;
     padding: 20px;
@@ -79,6 +79,7 @@ p {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s, box-shadow 0.3s;
     margin: 20px;
+    max-width: 1000px;
 }
 
 .movies-grid {
@@ -121,3 +122,6 @@ p {
     color: #666;
 }
 
+.movie-history{
+    text-align: left;
+}
